fixed all chart layout issues

--- a/class-projects/432-current-research/styles/current-research-common.css
+++ b/class-projects/432-current-research/styles/current-research-common.css
@@ -5,3 +5,7 @@
     justify-content: center;
     flex-wrap: wrap;
 }
+
+.chart-spacing {
+    margin: 10px;
+}
